--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 UE4入门作业APK和演示视频：https://share.weiyun.com/zqpVX8SW
 游戏模式作业APK和演示视频：https://share.weiyun.com/KmC8IvhM
 UMG作业APK和演示视频：https://share.weiyun.com/kqqF5OGk
-骨骼动画作业APK和演示视频：
+骨骼动画作业APK和演示视频：https://share.weiyun.com/I6Warmt4
