--- a/README
+++ b/README
@@ -3,3 +3,4 @@ UE4入门作业APK和演示视频：https://share.weiyun.com/zqpVX8SW
 UMG作业APK和演示视频：https://share.weiyun.com/kqqF5OGk
 骨骼动画作业APK和演示视频：https://share.weiyun.com/I6Warmt4
 基础物理作业APK和演示视频：https://share.weiyun.com/lAHqeQIa
+AI作业APK和演示视频：https://share.weiyun.com/hdFjUMuo
